# pto-kernels

./: .clang-format  .gitignore  .gitlab-ci.examples.yml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .prospector.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE.md  pyproject.toml  pytest.ini  requirements.txt  run_abs.py  run_abs_cpu.py  run_gdn_chunk_cumsum.py  run_gdn_chunk_h.py  run_gdn_chunk_o.py  run_gdn_scaled_dot_kkt.py  run_gdn_wy_fast.py  run_kda_chunk_h.py  run_kda_chunk_o.py  run_kda_gate_cumsum.py  run_kda_kkt.py  run_kda_wy.py  run_simple_matmul.py  run_swiglu.py  run_tri_inv_rec_unroll.py
.github/workflows/: build-examples-aicpu.yml  build.yml  build.yml.disabled  cppcheck.yml  doxygen.yml  pre_commit_check.yml  python-packaging.yml  python-packaging.yml.disabled  tag_version.yml
.skills/npu_kernel_general/: skills.md
.skills/testing-pto-kernels/: .gitignore  SKILL.md
.skills/testing-pto-kernels/reference/: .gitignore  README.md  launch-methods.md  pto_demo_utils.py  reproduce.sh  run_with_timeout.sh  synchronization-and-architecture.md  verification-log.md
bench/: canonical_compile_flags.yaml  kernel_inventory.yaml
bench/specs/attention/: flash_attention_score.yaml
bench/specs/ffn/: ffn.yaml
bench/specs/gmm/: grouped_matmul.yaml
bench/specs/mc2/: all_gather_matmul.yaml  grouped_mat_mul_all_reduce.yaml  inplace_matmul_all_reduce_add_rms_norm.yaml  matmul_all_reduce.yaml  matmul_all_reduce_add_rms_norm.yaml  matmul_reduce_scatter.yaml  moe_distribute_combine.yaml  moe_distribute_dispatch.yaml
bench/specs/moe/: moe_token_permute.yaml
bench/specs/posembedding/: apply_rotary_pos_emb.yaml
benchmarking/: bench_tri_inv_col_sweep.py  bench_tri_inv_rec_unroll.py  bench_tri_inv_rec_unroll_bf16_vs_fp16.py
benchs/: bench_tri_inv_col_sweep.py
csrc/examples/: main_abs.cpp
csrc/host/: config_flash_attention.h  csr_gather.h  pybind11.cpp  torch_abs.h  torch_batch_matrix_square.h  torch_causal_conv1d.h  torch_chunk_cumsum.h  torch_chunk_h_kda.h  torch_chunk_o_kda.h  torch_csr_gather.h  torch_cube_reduce.h  torch_fa.h  torch_flash_attention.h  torch_gdn_causal_conv1d.h  torch_gdn_chunk_cumsum.h  torch_gdn_chunk_h.h  torch_gdn_chunk_o.h  torch_gdn_scaled_dot_kkt.h  torch_gdn_wy_fast.h  torch_histogram.h  torch_kda_chunk_h.h  torch_kda_chunk_o.h  torch_kda_gate_cumsum.h  torch_kda_kkt.h  torch_kda_wy.h  torch_reduce.h  torch_scan_mcssa.h  torch_scan_ul1.h  torch_simple_matmul.h  torch_swiglu.h  torch_tri_inv.h  torch_tri_inv_col_sweep.h  torch_tri_inv_ns.h  torch_tri_inv_rec_unroll.h  torch_tri_inv_trick.h  utils.h  utils_cpu.h
csrc/kernel/: constants.h  fa_config.h  inter_core_flag.hpp  kernel_abs.cpp  kernel_abs.h  kernel_abs_from_pto_dsl.cpp  kernel_batch_matrix_square.cpp  kernel_batch_matrix_square.h  kernel_causal_conv1d.cpp  kernel_chunk_cumsum.cpp  kernel_chunk_h_kda.cpp  kernel_chunk_o_kda.cpp  kernel_csr_gather.cpp  kernel_csr_gather.h  kernel_cube_reduce.cpp  kernel_fa.cpp  kernel_flash_attention.cpp  kernel_gdn_causal_conv1d.cpp  kernel_gdn_chunk_cumsum.cpp  kernel_gdn_chunk_h.cpp  kernel_gdn_chunk_o.cpp  kernel_gdn_scaled_dot_kkt.cpp  kernel_gdn_wy_fast.cpp  kernel_histogram.cpp  kernel_kda_chunk_h.cpp  kernel_kda_chunk_o.cpp  kernel_kda_gate_cumsum.cpp  kernel_kda_kkt.cpp  kernel_kda_wy.cpp  kernel_scan_mcssa.cpp  kernel_scan_ul1.cpp  kernel_scan_ul1.h  kernel_simple_matmul.cpp  kernel_simple_matmul.h  kernel_swiglu.cpp  kernel_swiglu.h  kernel_tri_inv_col_sweep.cpp  kernel_tri_inv_col_sweep.h  kernel_tri_inv_ns.cpp  kernel_tri_inv_ns.h  (+9 more)
docs/: cann_recipes_infer_notes.md  porting-cce-to-pto-isa.md
doxygen/: Doxyfile
examples/a5/: data_utils.h  main_abs.cpp
examples/a5_sim/: README.md  cannsim_vs_msprof.md  run_cannsim.sh  run_cannsim_entry.sh  run_msprof.sh  run_thread_sweep.sh  vec_sim.py
examples/a5_sim/common/: __init__.py  build.py  host_info.py  torch_runtime.py
examples/a5_sim/configs/: scale_ladder.json
examples/a5_sim/kernels/: silu_a5.cpp  swiglu_a5.cpp
examples/aicpu/: Makefile  README.md  main.asc
examples/aicpu/hello-world/: Makefile  hello_world.aicpu
examples/jit_cpp/: conftest.py
examples/jit_cpp/a5_abs/: .gitignore  README.md  jit_util_a5_abs.py  run_abs.py  run_msprof.sh
examples/jit_cpp/block_rotate_fp16/: block_rotate_fp16.cpp  block_rotate_fp16_double_buffer.cpp  compare_single_vs_double_buffer.py  jit_util_block_rotate.py  run_block_rotate.py  run_block_rotate_double_buffer.py
examples/jit_cpp/c2v_sync/: MyC2VPipe.hpp  MyTSync.hpp  README.md  compile.sh  issue_report.md  run_sync_c2v.py  sync_c2v_tpushpop.cpp  sync_c2v_tsync.cpp
examples/jit_cpp/causal_conv1d/: .gitignore  README.md  causal_conv1d_pto.cpp  conftest.py  jit_util_causal_conv1d.py  (+2 more)
python/pto_kernels/: __init__.py  benchmarking.py  config.py  kda.py  registry.py
scripts/: README.md  bootstrap_workspace.sh  build.sh  build_abs.sh  build_cpu.py  check_env.py  data_gen_abs.py  gen-wheel.sh  install-wheel.sh  source_env.sh  test_cpu.py
skills/pto-kernel-writer/: SKILL.md
templates/kernel_writer/: README.md  adapter_baseline.py.template  adapter_ptodsl.py.template  bench_spec.yaml.template  kernel.py.template  meta.py.template
tests/: conftest.py  ref_kda.py  test_abs.py  test_ascend_utils.py  test_batch_matrix_square.py  test_bench_specs.py  test_chunk_cumsum.py  test_chunk_h_kda.py  test_chunk_o_kda.py  test_csr_gather.py  test_cube_reduce.py  test_env_utils.py  test_fa.py  test_flash_attention.py  test_gdn_causal_conv1d.py  test_gdn_chunk_cumsum.py  test_gdn_chunk_h.py  test_gdn_chunk_o.py  test_gdn_scaled_dot_kkt.py  test_gdn_wy_fast.py  test_histogram.py  test_kda_chunk_h.py  test_kda_chunk_o.py  test_kda_gate_cumsum.py  test_kda_kkt.py  test_kda_wy.py  test_registry_inventory.py  test_scan_mcssa.py  test_scan_ul1.py  test_simple_matmul.py  test_swiglu.py  test_tri_inv_col_sweep.py  test_tri_inv_ns.py  test_tri_inv_rec_unroll.py  test_tri_inv_rec_unroll_variable_sequence_lengths.py  test_tri_inv_trick.py  test_workflow_docs.py  utils.py
tests/data/: npu_smi_910b.txt
(+583 files in other folders)
